# semimp

./: LICENSE  README.md  semimp.cabal  stack.yaml
app/: Main.hs
src/: Monadic.hs  Opt.hs  Semantics.hs
