name:           semimp
version:        0.1.0.0
description:    
homepage:       https://github.com/bohadi/semimp#readme
bug-reports:    https://github.com/bohadi/semimp/issues
author:         bohadi
maintainer:     bohadi@protonmail.com
copyright:      2018 bohadi
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/bohadi/semimp

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , bytestring
  exposed-modules:
      Semantics
    , Opt
  other-modules:
      Paths_semimp
  default-language: Haskell2010

executable semimp-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , semimp
  other-modules:
      Paths_semimp
  default-language: Haskell2010
